tests/spec/parse/snapshots/select_match_receive.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(ch: Channel<int>) {
    select {
      match ch.receive() {
        Some(v) => process(v),
        None => handle_close(),
      },
      _ => default(),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "ch",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 2,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Channel",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 21,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 12,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Select {
                        arms: [
                            MatchReceive {
                                receive_expression: Call {
                                    expression: DotAccess {
                                        expression: Identifier {
                                            value: "ch",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 50,
                                                byte_length: 2,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "receive",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 50,
                                            byte_length: 10,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 50,
                                        byte_length: 12,
                                    },
                                    call_kind: Unresolved,
                                },
                                arms: [
                                    MatchArm {
                                        pattern: EnumVariant {
                                            identifier: "Some",
                                            fields: [
                                                Identifier {
                                                    identifier: "v",
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 76,
                                                        byte_length: 1,
                                                    },
                                                    binding: None,
                                                },
                                            ],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 71,
                                                byte_length: 7,
                                            },
                                        },
                                        expression: Call {
                                            expression: Identifier {
                                                value: "process",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 82,
                                                    byte_length: 7,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [
                                                Identifier {
                                                    value: "v",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 90,
                                                        byte_length: 1,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                            ],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 82,
                                                byte_length: 10,
                                            },
                                            call_kind: Unresolved,
                                        },
                                    },
                                    MatchArm {
                                        pattern: EnumVariant {
                                            identifier: "None",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 100,
                                                byte_length: 4,
                                            },
                                        },
                                        expression: Call {
                                            expression: Identifier {
                                                value: "handle_close",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 108,
                                                    byte_length: 12,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 108,
                                                byte_length: 14,
                                            },
                                            call_kind: Unresolved,
                                        },
                                    },
                                ],
                            },
                            WildCard {
                                body: Call {
                                    expression: Identifier {
                                        value: "default",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 140,
                                            byte_length: 7,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 140,
                                        byte_length: 9,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 123,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 129,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 155,
        },
    },
]
