tests/spec/parse/snapshots/select_multiple_arms.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(ch1: Receiver<int>, ch2: Sender<string>) {
    select {
      let x = ch1 => process(x),
      ch2.send("hello") => print("sent"),
      _ => print("default"),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "ch1",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Receiver",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 13,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "ch2",
                    span: Span {
                        file_id: 0,
                        byte_offset: 29,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Sender",
                        params: [
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 41,
                                    byte_length: 6,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 34,
                            byte_length: 14,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Select {
                        arms: [
                            Receive {
                                binding: Identifier {
                                    identifier: "x",
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 71,
                                        byte_length: 1,
                                    },
                                    binding: None,
                                },
                                receive_expression: Identifier {
                                    value: "ch1",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 75,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                                body: Call {
                                    expression: Identifier {
                                        value: "process",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 82,
                                            byte_length: 7,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "x",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 90,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 82,
                                        byte_length: 10,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                            Send {
                                send_expression: Call {
                                    expression: DotAccess {
                                        expression: Identifier {
                                            value: "ch2",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 98,
                                                byte_length: 3,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "send",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 98,
                                            byte_length: 8,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "hello",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 107,
                                                byte_length: 7,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 98,
                                        byte_length: 17,
                                    },
                                    call_kind: Unresolved,
                                },
                                body: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 119,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "sent",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 125,
                                                byte_length: 6,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 119,
                                        byte_length: 13,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                            WildCard {
                                body: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 143,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "default",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 149,
                                                byte_length: 9,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 143,
                                        byte_length: 16,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 54,
                            byte_length: 110,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 50,
                    byte_length: 116,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 165,
        },
    },
]
