tests/spec/parse/snapshots/select_receive.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(ch: Receiver<int>) {
    select {
      let x = ch => process(x),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "ch",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 2,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Receiver",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 22,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 13,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Select {
                        arms: [
                            Receive {
                                binding: Identifier {
                                    identifier: "x",
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 49,
                                        byte_length: 1,
                                    },
                                    binding: None,
                                },
                                receive_expression: Identifier {
                                    value: "ch",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 53,
                                        byte_length: 2,
                                    },
                                    resolution: Unresolved,
                                },
                                body: Call {
                                    expression: Identifier {
                                        value: "process",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 59,
                                            byte_length: 7,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "x",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 67,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 59,
                                        byte_length: 10,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 32,
                            byte_length: 42,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 28,
                    byte_length: 48,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 75,
        },
    },
]
